# todo_app

./: Cargo.toml  config.yml  docker-compose.yml  state.json
migrations/2023-05-07-103704_create_to_do_items/: up.sql
src/: config.rs  database.rs  jwt.rs  main.rs  processes.rs  state.rs
src/json_serialization/: to_do_item.rs  to_do_items.rs
src/models/item/: item.rs  new_item.rs
src/to_do/: enums.rs  mod.rs
src/to_do/structs/: base.rs  done.rs  pending.rs
src/to_do/traits/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/: mod.rs
src/views/app/: content_loader.rs  items.rs  mod.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
templates/: main.html  main.js
