[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.0.1"
actix-service = "2.0.2"
chrono = "0.4.19"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
futures = "0.3.21"
serde_json = "1.0.59"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
